# bastion

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  PHILOSOPHY.md  README.md  SECURITY.md  zenn_article_draft.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
apps/bastion-cli/: Cargo.toml
apps/bastion-cli/src/: main.rs
apps/bastion-cli/templates/: guardrails_template.rs  secure_requirements.txt
libs/bastion-core/: Cargo.toml
libs/bastion-core/src/: common.rs  fs_guard.rs  guardrails.rs  lib.rs  net_guard.rs  python_check.rs  text_guard.rs
src/: fs_guard.rs  guardrails.rs  init.rs  lib.rs  main.rs  net_guard.rs  scanner.rs  text_guard.rs
templates/: guardrails_template.rs
