[workspace]
resolver = "2"
members = [
    "libs/bastion-core",
    "apps/bastion-cli",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["motivationstudio,LLC"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/motivationstudio-llc/bastion"
description = "Industrial-grade security engine for AI and general applications"

[workspace.dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
reqwest = { version = "0.11", features = ["json"] }
regex = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
colored = "2.0"
walkdir = "2.3"
trust-dns-resolver = "0.23"
url = "2.4"
unicode-normalization = "0.1"
libc = "0.2"
jsonschema = "0.17"
tempfile = "3.8"
