[package]
name = "bastion-cli"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Command line interface for Bastion security auditing"

[dependencies]
bastion-core = { path = "../../libs/bastion-core" }
anyhow.workspace = true
clap = { version = "4.4", features = ["derive"] }
colored.workspace = true
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
walkdir.workspace = true
