[package]
name = "bastion-core"
version = "1.0.0"
authors = ["motivationstudio,LLC"]
license = "AGPL-3.0"
edition = "2021"
description = "Core security guards for Bastion 1.0 (Jail, Shield, Guard)"

[features]
default = ["fs", "text", "net"]
fs = ["dep:libc"]
text = ["dep:unicode-normalization"]
net = ["dep:trust-dns-resolver", "dep:reqwest", "dep:tokio"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
colored = "2.0"
walkdir = "2.3"
url = "2.4"
tracing = "0.1"

# Optional dependencies for features
unicode-normalization = { version = "0.1", optional = true }
trust-dns-resolver = { version = "0.23", optional = true }
reqwest = { version = "0.11", optional = true, features = ["json"] }
tokio = { version = "1.0", optional = true, features = ["full"] }
libc = { version = "0.2", optional = true }

[dev-dependencies]
tempfile = "3.8"
tokio = { version = "1.0", features = ["full"] }
